added link to colab

--- a/tasc5_notebook.ipynb
+++ b/tasc5_notebook.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/afeinstein20/tasc-tutorial/blob/master/tasc5_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only necesary when running in Colab\n",
+    "!pip install eleanor\n",
+    "!pip install matplotlib\n",
+    "!pip install numpy \n",
+    "!pip install astropy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -644,7 +664,7 @@
     "\n",
     "[eleanor Documentation](https://adina.feinste.in/eleanor)\n",
     "\n",
-    "[eleanor Paper ArXiv Link](https://arxiv.org/abs/1903.09152)"
+    "[eleanor Paper arXiv Link](https://arxiv.org/abs/1903.09152)"
    ]
   },
   {
