inline will work?

--- a/tasc5_notebook.ipynb
+++ b/tasc5_notebook.ipynb
@@ -206,6 +206,8 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "plt.figure(figsize=(14,8))\n",
     "plt.imshow(data.post_obj.flux[0], origin='lower', vmax=400)\n",
     "plt.title(\"Postcard\")\n",
